--- a/market-frontend/package.json
+++ b/market-frontend/package.json
@@ -20,6 +20,7 @@
     "react-scripts": "5.0.1",
     "redux": "^5.0.1",
     "styled-components": "^6.1.13",
+    "swiper": "^11.1.15",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
